backend/LughatDad.java
/* LughatDad.java */
/* Generated By:JavaCC: Do not edit this line. LughatDad.java */
import java.util.HashMap;
import java.util.ArrayList;
import java.util.List;

public class LughatDad implements LughatDadConstants {
    // Symbol Table
    static HashMap<String, Object> symbolTable = new HashMap<>();

    // --- Interpreter Classes (Part 3) ---
    static abstract class Expr { abstract Object eval(); }
    static abstract class Stmt { abstract void execute(); }

    static class NumExpr extends Expr {
        double val;
        NumExpr(double v) { val = v; }
        Object eval() { return val; }
    }

    static class StrExpr extends Expr {
        String val;
        StrExpr(String v) { val = v; }
        Object eval() { return val; }
    }

    static class BoolExpr extends Expr {
        boolean val;
        BoolExpr(boolean v) { val = v; }
        Object eval() { return val; }
    }

    static class VarExpr extends Expr {
        String name;
        VarExpr(String n) { name = n; }
        Object eval() {
            if(!symbolTable.containsKey(name))
                throw new RuntimeException("Undefined variable: " + name);
            return symbolTable.get(name);
        }
    }

    static class BinOp extends Expr {
        Expr left, right; String op;
        BinOp(Expr l, String o, Expr r) { left = l; op = o; right = r; }
        Object eval() {
            Object l = left.eval();
            Object r = right.eval();
            if (op.equals("==")) return l.equals(r);
            if (op.equals("!=")) return !l.equals(r);
            double d1 = (Double) l;
            double d2 = (Double) r;
            switch(op) {
                case "+": return d1 + d2;
                case "-": return d1 - d2;
                case "*": return d1 * d2;
                case "/": return d1 / d2;
                case ">": return d1 > d2;
                case "<": return d1 < d2;
                case ">=": return d1 >= d2;
                case "<=": return d1 <= d2;
            }
            return null;
        }
    }

    static class BlockStmt extends Stmt {
        List<Stmt> stmts = new ArrayList<>();
        void addStmt(Stmt s) { stmts.add(s); }
        void execute() { for(Stmt s : stmts) s.execute(); }
    }

    static class DeclStmt extends Stmt {
        String name; Expr expr;
        DeclStmt(String n, Expr e) { name = n; expr = e; }
        void execute() { symbolTable.put(name, expr.eval()); }
    }

    static class AssignStmt extends Stmt {
        String name; Expr expr;
        AssignStmt(String n, Expr e) { name = n; expr = e; }
        void execute() {
            if(!symbolTable.containsKey(name))
                throw new RuntimeException("Variable not declared: " + name);
            symbolTable.put(name, expr.eval());
        }
    }

    static class PrintStmt extends Stmt {
        Expr expr;
        PrintStmt(Expr e) { expr = e; }
        void execute() {
            Object val = expr.eval();
            if (val instanceof Double) {
                double d = (Double) val;
                if (d == (long) d) { System.out.println((long) d); return; }
            }
            if (val instanceof Boolean) {
                System.out.println((Boolean)val ? "\u0635\u062d" : "\u062e\u0637\u0623");
                return;
            }
            System.out.println(val);
        }
    }

    static class IfStmt extends Stmt {
        Expr cond; Stmt thenBlock, elseBlock;
        IfStmt(Expr c, Stmt t, Stmt e) { cond = c; thenBlock = t; elseBlock = e; }
        void execute() {
            Object res = cond.eval();
            if (res instanceof Boolean && (Boolean) res) { thenBlock.execute(); }
            else if(elseBlock != null) { elseBlock.execute(); }
        }
    }

    static class WhileStmt extends Stmt {
        Expr cond; Stmt body;
        WhileStmt(Expr c, Stmt b) { cond = c; body = b; }
        void execute() {
            while(true) {
                Object res = cond.eval();
                if (res instanceof Boolean && (Boolean) res) { body.execute(); }
                else { break; }
            }
        }
    }

    static String convertArabicDigits(String input) {
        return input.replaceAll("\u0660", "0").replaceAll("\u0661", "1").replaceAll("\u0662", "2")
                    .replaceAll("\u0663", "3").replaceAll("\u0664", "4").replaceAll("\u0665", "5")
                    .replaceAll("\u0666", "6").replaceAll("\u0667", "7").replaceAll("\u0668", "8")
                    .replaceAll("\u0669", "9");
    }

    // --- Main Method ---
    public static void main(String[] args) {
        try {
            java.io.InputStream fileStream = new java.io.FileInputStream("src/test2.txt");
            LughatDad parser = new LughatDad(fileStream);

            System.out.println("Reading from test2.txt...");
            BlockStmt programTree = parser.program();

            System.out.println("Success! Grammar is 100% correct.");
            System.out.println(">> Executing Program Output:");
            System.out.println("----------------------------------");
            programTree.execute();
            System.out.println("----------------------------------");

        } catch (java.io.FileNotFoundException e) {
            System.err.println("Error: test2.txt not found in src folder!");
        } catch (ParseException e) {
            System.err.println("Syntax Error: " + e.getMessage());
        } catch (Exception e) {
            System.err.println("Runtime Error: " + e.getMessage());
        }
    }

/* ==========================================
 * PART 2 & 3: PARSER & INTERPRETER (MEMBERS 2 & 3)
 * ========================================== */

// TODO: Member 2 will translate the BNF grammar here, 
// and Member 3 will add the Java semantic actions.

/* ==========================================
 * PART 2: PARSER GRAMMAR (MEMBER 2)
 * ========================================== */

// Top-level program rule: reads a sequence of statements until EOF
  static final public BlockStmt program() throws ParseException {BlockStmt p = new BlockStmt(); Stmt s;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MUTA_GHAYYER:
      case ITBA3:
      case ETHA:
      case BAYNAMA:
      case ARABIC_IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      s = statement();
p.addStmt(s);
    }
    jj_consume_token(0);
{if ("" != null) return p;}
    throw new Error("Missing return statement in function");
}

  static final public Stmt statement() throws ParseException {Stmt s;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MUTA_GHAYYER:{
      s = declaration();
      break;
      }
    case ARABIC_IDENTIFIER:{
      s = assignment();
      break;
      }
    case ITBA3:{
      s = printStmt();
      break;
      }
    case ETHA:{
      s = ifStmt();
      break;
      }
    case BAYNAMA:{
      s = whileStmt();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return s;}
    throw new Error("Missing return statement in function");
}

  static final public Stmt declaration() throws ParseException {Token t; Expr e;
    jj_consume_token(MUTA_GHAYYER);
    t = jj_consume_token(ARABIC_IDENTIFIER);
    jj_consume_token(ASSIGN);
    e = expression();
    jj_consume_token(SEMICOLON);
{if ("" != null) return new DeclStmt(t.image, e);}
    throw new Error("Missing return statement in function");
}

  static final public Stmt assignment() throws ParseException {Token t; Expr e;
    t = jj_consume_token(ARABIC_IDENTIFIER);
    jj_consume_token(ASSIGN);
    e = expression();
    jj_consume_token(SEMICOLON);
{if ("" != null) return new AssignStmt(t.image, e);}
    throw new Error("Missing return statement in function");
}

  static final public Stmt printStmt() throws ParseException {Expr e;
    jj_consume_token(ITBA3);
    jj_consume_token(LPAREN);
    e = expression();
    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
{if ("" != null) return new PrintStmt(e);}
    throw new Error("Missing return statement in function");
}

  static final public Stmt ifStmt() throws ParseException {Expr c; Stmt thenB; Stmt elseB = null;
    jj_consume_token(ETHA);
    jj_consume_token(LPAREN);
    c = condition();
    jj_consume_token(RPAREN);
    thenB = block();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case WA_ELLA:{
      jj_consume_token(WA_ELLA);
      elseB = block();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      ;
    }
{if ("" != null) return new IfStmt(c, thenB, elseB);}
    throw new Error("Missing return statement in function");
}

  static final public Stmt whileStmt() throws ParseException {Expr c; Stmt b;
    jj_consume_token(BAYNAMA);
    jj_consume_token(LPAREN);
    c = condition();
    jj_consume_token(RPAREN);
    b = block();
{if ("" != null) return new WhileStmt(c, b);}
    throw new Error("Missing return statement in function");
}

  static final public BlockStmt block() throws ParseException {BlockStmt b = new BlockStmt(); Stmt s;
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MUTA_GHAYYER:
      case ITBA3:
      case ETHA:
      case BAYNAMA:
      case ARABIC_IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      s = statement();
b.addStmt(s);
    }
    jj_consume_token(RBRACE);
{if ("" != null) return b;}
    throw new Error("Missing return statement in function");
}

/* --- Expressions and Conditions --- */
  static final public 
Expr condition() throws ParseException {Expr left; Expr right = null; Token op = null;
    left = expression();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case GT:
    case LT:
    case EQ:
    case NEQ:
    case GTE:
    case LTE:{
      op = relop();
      right = expression();
left = new BinOp(left, op.image, right);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  static final public Expr expression() throws ParseException {Expr left, right; Token op;
    left = term();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        op = jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        op = jj_consume_token(MINUS);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = term();
left = new BinOp(left, op.image, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  static final public Expr term() throws ParseException {Expr left, right; Token op;
    left = unary();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULTIPLY:
      case DIVIDE:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULTIPLY:{
        op = jj_consume_token(MULTIPLY);
        break;
        }
      case DIVIDE:{
        op = jj_consume_token(DIVIDE);
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = unary();
left = new BinOp(left, op.image, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  static final public Expr unary() throws ParseException {Expr e; Token op = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MINUS:{
      op = jj_consume_token(MINUS);
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    e = primary();
if (op != null) { {if ("" != null) return new BinOp(new NumExpr(0), "-", e);} }
    {if ("" != null) return e;}
    throw new Error("Missing return statement in function");
}

  static final public Expr primary() throws ParseException {Token t; Expr e;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUMBER:{
      t = jj_consume_token(NUMBER);
String s = convertArabicDigits(t.image);
    {if ("" != null) return new NumExpr(Double.parseDouble(s));}
      break;
      }
    case STRING:{
      t = jj_consume_token(STRING);
{if ("" != null) return new StrExpr(t.image.substring(1, t.image.length() - 1));}
      break;
      }
    case ARABIC_IDENTIFIER:{
      t = jj_consume_token(ARABIC_IDENTIFIER);
{if ("" != null) return new VarExpr(t.image);}
      break;
      }
    case LPAREN:{
      jj_consume_token(LPAREN);
      e = expression();
      jj_consume_token(RPAREN);
{if ("" != null) return e;}
      break;
      }
    case SAH:{
      jj_consume_token(SAH);
{if ("" != null) return new BoolExpr(true);}
      break;
      }
    case KHATA:{
      jj_consume_token(KHATA);
{if ("" != null) return new BoolExpr(false);}
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Token relop() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case GT:{
      t = jj_consume_token(GT);
      break;
      }
    case LT:{
      t = jj_consume_token(LT);
      break;
      }
    case EQ:{
      t = jj_consume_token(EQ);
      break;
      }
    case NEQ:{
      t = jj_consume_token(NEQ);
      break;
      }
    case GTE:{
      t = jj_consume_token(GTE);
      break;
      }
    case LTE:{
      t = jj_consume_token(LTE);
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return t;}
    throw new Error("Missing return statement in function");
}

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public LughatDadTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[12];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x25c0,0x25c0,0x200,0x25c0,0x1f800000,0xc0000,0xc0000,0x300000,0x300000,0x80000,0x20033800,0x1f800000,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,};
	}

  /** Constructor with InputStream. */
  public LughatDad(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public LughatDad(java.io.InputStream stream, String encoding) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser.  ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new LughatDadTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 12; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 12; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public LughatDad(java.io.Reader stream) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new LughatDadTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 12; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new LughatDadTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 12; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public LughatDad(LughatDadTokenManager tm) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 12; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(LughatDadTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 12; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  static private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[34];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 12; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		   if ((jj_la1_1[i] & (1<<j)) != 0) {
			 la1tokens[32+j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 34; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  static private boolean trace_enabled;

/** Trace enabled. */
  static final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
